--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,32 @@
 {
-  "rewrites": [{ "source": "/stream", "destination": "/api/stream" }]
+  "functions": {
+    "api/stream.js": {
+      "maxDuration": 10
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/stream",
+      "destination": "/api/stream"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/stream",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        }
+      ]
+    }
+  ]
 }
