--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,9 @@
 {
-  "functions": {
-    "api/stream.js": {
-      "maxDuration": 10
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/stream",
-      "destination": "/api/stream"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "api/stream.js", "use": "@vercel/node" }
   ],
-  "headers": [
-    {
-      "source": "/api/stream",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, OPTIONS"
-        }
-      ]
-    }
+  "routes": [
+    { "src": "/stream", "dest": "/api/stream.js" }
   ]
 }
